--- a/index.html
+++ b/index.html
@@ -14,9 +14,24 @@
 <body>
     <div class="shortcut">
         <div class="wrapper">
-            <div class="fl">ee</div>
-            <div class="fr">44</div>
+            <div class="fl">
+                <ul>    
+                    <li><a href="#">品优购欢迎您！</a></li>
+                    <li class="style_ml10"><a href="#">请登录</a><a href="#" class="style_red style_ml10">免费注册</a></li>
+                </ul>
+            </div>
+            <div class="fr">
+                <ul>
+                    <li><a href="#">我的订单</a></li>
+                    <li><a href="#" class="arrow_icon">我的品优购</a></li>
+                    <li><a href="#">品优购会员</a></li>
+                    <li><a href="#">企业采购</a></li>
+                    <li><a href="#">关注品优购</a></li>
+                    <li><a href="#" class="arrow_icon">客户服务</a></li>
+                    <li><a href="#" class="arrow_icon">网站导航</a></li>
+                </ul>
+            </div>
         </div>
     </div>
 </body>
-</html>
+</html>   
