--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <link rel="stylesheet" href="./css/index.css">
 </head>
 <body>
-    <div class="shortcut">
+    <!-- 快捷导航栏 shortcut start -->
+    <section class="shortcut">
         <div class="wrapper"> 
             <div class="fl">
                 <ul>
@@ -32,6 +33,12 @@
                 </ul>
             </div>
         </div>
-    </div>
+    </section>
+     <!-- 快捷导航栏 shortcut end -->
+      <!-- 头部header start -->
+    <header class="header wrapper">
+        ddd
+    </header>
+       <!-- 头部header end -->
 </body>
 </html>  
