shortcut实现第二次

--- a/index.html
+++ b/index.html
@@ -12,33 +12,48 @@
     <link rel="stylesheet" href="./css/index.css">
 </head>
 <body>
-    <!-- 快捷导航栏 shortcut start -->
+    <!-- shortcut 快捷导航栏 start -->
     <section class="shortcut">
-        <div class="wrapper"> 
-            <div class="fl">
+        <div class="w">
+            <!-- shortcut快捷导航栏左侧 start-->
+            <div class="fl_left">
                 <ul>
-                    <li>品优购欢迎您！</li>
-                    <li><a href="#" class="mleft10">请登录</a><a href="#" class="style_red mleft10">免费注册 </a></li>
+                    <li>品优购欢迎您！ </li>
+                    <li>请登录<a href="#">免费注册</a></li>
                 </ul>
             </div>
-            <div class="fr">
+            <!-- shortcut快捷导航栏左侧 end-->
+
+            <!-- shortcut快捷导航栏右侧 start-->
+            <div class="fl_right">
                 <ul>
-                    <li><a href="#">我的订单</a></li><li></li>
-                    <li><a href="#">我的品优购</a></li><li></li>
-                    <li><a href="#">品优购会员</a></li><li></li>
-                    <li><a href="#">企业采购</a></li><li></li>
-                    <li><a href="#">关注品优购</a></li><li></li>
-                    <li><a href="#">客户服务</a></li><li></li>
-                    <li><a href="#">网站导航</a></li><li></li>
+                    <li class="bottom_arrow_icon"><a href="">我的订单</a></li>
+                    <li></li>
+
+                    <li><a href="">我的品优购</a></li>
+                    <li></li>
+
+                    <li><a href="">品优购会员</a></li>
+                    <li></li>
+
+                    <li><a href="">企业采购</a></li>
+                    <li></li>
+
+                    <li><a href="">关注品优购</a></li>
+                    <li></li>
+
+                    <li class="bottom_arrow_icon"><a href="">客户服务</a></li>
+                    <li></li>
+
+                    <li class="bottom_arrow_icon"><a href="">网站导航</a></li>
+                    <li></li>
+
                 </ul>
             </div>
+            
+            <!-- shortcut快捷导航栏右侧 start-->
         </div>
     </section>
-     <!-- 快捷导航栏 shortcut end -->
-      <!-- 头部header start -->
-    <header class="header wrapper">
-        ddd
-    </header>
-       <!-- 头部header end -->
+    <!-- shortcut 快捷导航栏 end -->
 </body>
 </html>  
