头部logo header>.logo>h1>a text-inident-999px fs0

--- a/index.html
+++ b/index.html
@@ -55,5 +55,13 @@
         </div>
     </section>
     <!-- shortcut 快捷导航栏 end -->
+
+    <!-- header 头部 start -->
+    <div class="header w" >
+        <div class="logo">
+            <h1><a href="index.html" title="品优购">品优购</a></h1>
+        </div>
+    </div>
+    <!-- header 头部 end -->
 </body>
 </html>  
