--- a/index.html
+++ b/index.html
@@ -61,6 +61,22 @@
         <div class="logo">
             <h1><a href="index.html" title="品优购">品优购</a></h1>
         </div>
+
+        <div class="search">
+            <input type="text" class="text" placeholder="语言开发">
+            <button class="btn">搜索</button>
+        </div>
+
+        <div class="hotwords">
+            <a href="#">优惠购首发</a>
+            <a href="#">亿元优惠</a>
+            <a href="#">9.9元团购</a>
+            <a href="#">美满99减30</a>
+            <a href="#">办公用品</a>
+            <a href="#">电脑</a>
+            <a href="#">通信</a>
+                                     
+        </div>
     </div>
     <!-- header 头部 end -->
 </body>
