头部我的购物车shopcar>a.mycar before after

--- a/index.html
+++ b/index.html
@@ -75,8 +75,9 @@
             <a href="#">办公用品</a>
             <a href="#">电脑</a>
             <a href="#">通信</a>
-                                     
         </div>
+
+        <div class="shopcar"><a href="#" class="mycar">我的购物车</a></div>
     </div>
     <!-- header 头部 end -->
 </body>
