头部购物车count数量

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             <a href="#">通信</a>
         </div>
 
-        <div class="shopcar"><a href="#" class="mycar">我的购物车</a></div>
+        <div class="shopcar"><a href="#" class="mycar">我的购物车</a><i class="count">33</i></div>
     </div>
     <!-- header 头部 end -->
 </body>
