header购物车count图标的正确做法

--- a/index.html
+++ b/index.html
@@ -12,61 +12,38 @@
     <link rel="stylesheet" href="./css/index.css">
 </head>
 <body>
-    <!-- shortcut 快捷导航栏 start -->
-    <section class="shortcut">
-        <div class="w">
-            <!-- shortcut快捷导航栏左侧 start-->
-            <div class="fl_left">
+    <div class="shortcut">
+        <div class="wrapper">
+            <div class="flt_left">
                 <ul>
-                    <li>品优购欢迎您！ </li>
-                    <li>请登录<a href="#">免费注册</a></li>
+                    <li>品优购欢迎您！</li>    
+                    <li><a href="#">请登录</a><a href="#">免费注册</a></li>
                 </ul>
             </div>
-            <!-- shortcut快捷导航栏左侧 end-->
 
-            <!-- shortcut快捷导航栏右侧 start-->
-            <div class="fl_right">
+            <div class="flt_right">
                 <ul>
-                    <li class="bottom_arrow_icon"><a href="">我的订单</a></li>
-                    <li></li>
-
-                    <li><a href="">我的品优购</a></li>
-                    <li></li>
-
-                    <li><a href="">品优购会员</a></li>
-                    <li></li>
-
-                    <li><a href="">企业采购</a></li>
-                    <li></li>
-
-                    <li><a href="">关注品优购</a></li>
-                    <li></li>
-
-                    <li class="bottom_arrow_icon"><a href="">客户服务</a></li>
-                    <li></li>
-
-                    <li class="bottom_arrow_icon"><a href="">网站导航</a></li>
-                    <li></li>
-
+                    <li><a href="" class="bottom_arrow">我的订单</a><i></i></li>
+                    <li><a href="">我的品优购</a><i></i></li>
+                    <li><a href="">品优购会员</a><i></i></li>
+                    <li><a href="">企业采购</a><i></i></li>
+                    <li><a href="" class="bottom_arrow">关注品优购</a><i></i></li>
+                    <li><a href="" class="bottom_arrow">客户服务</a><i></i></li>
+                    <li><a href="" class="bottom_arrow">网站导航</a><i></i></li>
                 </ul>
+
             </div>
-            
-            <!-- shortcut快捷导航栏右侧 start-->
         </div>
-    </section>
-    <!-- shortcut 快捷导航栏 end -->
+    </div>
 
-    <!-- header 头部 start -->
-    <div class="header w" >
+    <div class="header wrapper">
         <div class="logo">
             <h1><a href="index.html" title="品优购">品优购</a></h1>
         </div>
-
         <div class="search">
-            <input type="text" class="text" placeholder="语言开发">
+            <input type="text" class="text" placeholder="请输入....">
             <button class="btn">搜索</button>
-        </div>
-
+        </div>                         
         <div class="hotwords">
             <a href="#">优惠购首发</a>
             <a href="#">亿元优惠</a>
@@ -77,8 +54,10 @@
             <a href="#">通信</a>
         </div>
 
-        <div class="shopcar"><a href="#" class="mycar">我的购物车</a><i class="count">33</i></div>
+        <div class="shopcar">
+            <i class="car"></i> 我的购物车 <i class="arrow"></i>
+            <i class="count">99</i>
+        </div>
     </div>
-    <!-- header 头部 end -->
 </body>
 </html>  
