--- a/index.html
+++ b/index.html
@@ -14,37 +14,40 @@
 <body>
     <div class="shortcut">
         <div class="wrapper">
-            <div class="flt_left">
+            <div class="fl">
                 <ul>
-                    <li>品优购欢迎您！</li>    
-                    <li><a href="#">请登录</a><a href="#">免费注册</a></li>
+                    <li>品优购欢迎您！</li>
+                    <li><a href="#">请登录</a><a href="#" class="style_red">免费注册</a></li>
                 </ul>
             </div>
-
-            <div class="flt_right">
+            <div class="fr">
                 <ul>
-                    <li><a href="" class="bottom_arrow">我的订单</a><i></i></li>
-                    <li><a href="">我的品优购</a><i></i></li>
-                    <li><a href="">品优购会员</a><i></i></li>
-                    <li><a href="">企业采购</a><i></i></li>
-                    <li><a href="" class="bottom_arrow">关注品优购</a><i></i></li>
-                    <li><a href="" class="bottom_arrow">客户服务</a><i></i></li>
-                    <li><a href="" class="bottom_arrow">网站导航</a><i></i></li>
+                    <li><a href="">我的订单</a></li><li></li>
+                    <li class="bottom_arrow_icon"><a href="">我的品优购</a></li><li></li>
+                    <li><a href="">品优购会员</a></li><li></li>
+                    <li><a href="">企业采购</a></li><li></li>
+                    <li class="bottom_arrow_icon"><a href="">关注品优购</a></li><li></li>
+                    <li class="bottom_arrow_icon"><a href="">客户服务</a></li><li></li>
+                    <li class="bottom_arrow_icon"><a href="">网站导航</a></li><li></li>
+        
                 </ul>
-
             </div>
         </div>
+
     </div>
 
     <div class="header wrapper">
         <div class="logo">
             <h1><a href="index.html" title="品优购">品优购</a></h1>
         </div>
+
         <div class="search">
-            <input type="text" class="text" placeholder="请输入....">
+            <input type="text" class="text" placeholder="java分布式...">
             <button class="btn">搜索</button>
-        </div>                         
+        </div>
+
         <div class="hotwords">
+                                     
             <a href="#">优惠购首发</a>
             <a href="#">亿元优惠</a>
             <a href="#">9.9元团购</a>
@@ -55,8 +58,7 @@
         </div>
 
         <div class="shopcar">
-            <i class="car"></i> 我的购物车 <i class="arrow"></i>
-            <i class="count">99</i>
+           <i class="car"></i> 我的购物车 <i class="right_arrow"></i><i class="count">333</i>
         </div>
     </div>
 </body>
