--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <div class="wrapper">
             <div class="dropdown float_left">
                 <div class="dt">全部商品分类</div>
-                <div class="dd">
+                <div class="dd" style="display: none;">
                     <ul>
                         <li class="menu_item"><a href="#">家用电器</a><i></i></li>
                         <li class="menu_item"><a href="#">手机、</a><a href="#">数码、</a><a href="#">通信</a><i></i></li>
@@ -101,6 +101,120 @@
             </div>
         </div>
     </div>
+
+    <div class="fotter">
+        <div class="wrapper">
+            <div class="module_service">
+                <ul>
+                    <li><i class="module_service_icon module_service_zheng_ping"></i>
+                        <div class="module_logo_title">
+                            <h3>正品保障</h3>
+                            <p>正品保障，提供发票</p>
+                        </div>
+                    </li>
+                    <li><i class="module_service_icon  module_service_ji_shu"></i>
+                        <div class="module_logo_title">
+                            <h3>正品保障</h3>
+                            <p>正品保障，提供发票</p>
+                        </div>
+                    </li>
+                    <li><i class="module_service_icon module_service_wu_you"></i>
+                        <div class="module_logo_title">
+                            <h3>正品保障</h3>
+                            <p>正品保障，提供发票</p>
+                        </div>
+                    </li>
+                    <li><i class="module_service_icon module_service_te_se"></i>
+                        <div class="module_logo_title">
+                            <h3>正品保障</h3>
+                            <p>正品保障，提供发票</p>
+                        </div>
+                    </li>
+                    <li><i class="module_service_icon module_service_bang_zu"></i>
+                        <div class="module_logo_title">
+                            <h3>正品保障</h3>
+                            <p>正品保障，提供发票</p>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+            <div class="module_help">
+                <div class="module_help_item">
+                    <dl>
+                        <dt>购物指南</dt>
+                        <dd>购物流程</dd>
+                        <dd>会员介绍</dd>
+                        <dd>生活旅行/团购</dd>
+                        <dd>常见问题</dd>
+                        <dd>大家电</dd>
+                        <dd>联系客服</dd>
+                    </dl>
+                </div>
+
+                <div class="module_help_item">
+                    <dl>
+                        <dt>购物指南</dt>
+                        <dd>购物流程</dd>
+                        <dd>会员介绍</dd>
+                        <dd>生活旅行/团购</dd>
+                        <dd>常见问题</dd>
+                        <dd>大家电</dd>
+                        <dd>联系客服</dd>
+                    </dl>
+                </div>
+
+                <div class="module_help_item">
+                    <dl>
+                        <dt>购物指南</dt>
+                        <dd>购物流程</dd>
+                        <dd>会员介绍</dd>
+                        <dd>生活旅行/团购</dd>
+                        <dd>常见问题</dd>
+                        <dd>大家电</dd>
+                        <dd>联系客服</dd>
+                    </dl>
+                </div>
+
+
+                <div class="module_help_item">
+                    <dl>
+                        <dt>购物指南</dt>
+                        <dd>购物流程</dd>
+                        <dd>会员介绍</dd>
+                        <dd>生活旅行/团购</dd>
+                        <dd>常见问题</dd>
+                        <dd>大家电</dd>
+                        <dd>联系客服</dd>
+                    </dl>
+                </div>
+
+                <div class="module_help_item">
+                    <dl>
+                        <dt>购物指南</dt>
+                        <dd>购物流程</dd>
+                        <dd>会员介绍</dd>
+                        <dd>生活旅行/团购</dd>
+                        <dd>常见问题</dd>
+                        <dd>大家电</dd>
+                        <dd>联系客服</dd>
+                    </dl>
+                </div>
+
+                <div class="module_help_item">
+                    <dl class="module_help_app">
+                        <dt>帮助中心</dt>
+                        <dd>
+                            <img src="./images/wx_cz.jpg" alt="">
+                            <p>品优购客户端</p>
+                        </dd>
+    
+                    </dl>
+                </div>
+
+            </div>
+            <div class="module_copyright"></div>
+        </div>
+    </div>
 </body>
 </html>  
 
@@ -113,7 +227,7 @@
 
 
 
-
+ 
 
 
 
