--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
     <link rel="stylesheet" href="./css/base.css">
     <link rel="stylesheet" href="./css/common.css">
     <link rel="stylesheet" href="./css/index.css">
+
+    <script>
+        function showDropdownDD(){
+            document.getElementById("dropdown").setAttribute("style","display:block")
+        }
+        function hiddenDropdownDD(){
+            document.getElementById("dropdown").setAttribute("style","display: none;")
+        }
+    </script>  
 </head>
 <body>
     <div class="shortcut">
@@ -65,8 +74,8 @@
     <div class="nav">
         <div class="wrapper">
             <div class="dropdown float_left">
-                <div class="dt">全部商品分类</div>
-                <div class="dd" style="display: none;">
+                <div class="dt"  onmouseover="showDropdownDD();" onmouseleave="hiddenDropdownDD();">全部商品分类</div>
+                <div class="dd" style="display: none;"  id="dropdown">
                     <ul>
                         <li class="menu_item"><a href="#">家用电器</a><i></i></li>
                         <li class="menu_item"><a href="#">手机、</a><a href="#">数码、</a><a href="#">通信</a><i></i></li>
@@ -138,6 +147,7 @@
                     </li>
                 </ul>
             </div>
+
             <div class="module_help">
                 <div class="module_help_item">
                     <dl>
@@ -212,15 +222,22 @@
                 </div>
 
             </div>
-            <div class="module_copyright"></div>
+
+            <div class="module_copyright">
+                <p>关于我们  |  联系我们  |  联系客服  |  商家入驻  |  营销中心  |  手机品优购  |  友情链接  |  销售联盟  |  品优购社区  |  品优购公益  |  English Site  |  Contact U</p>
+                <p>
+                    地址：北京市昌平区建材城西路金燕龙办公楼一层 邮编：100096 电话：400-618-4000 传真：010-82935100 邮箱: zhanghj+itcast.cn
+                     <br>
+                    京ICP备08001421号京公网安备110108007702
+                </p>
+            </div>
         </div>
     </div>
 </body>
 </html>  
 
 
-
-                                                             
+                                                 
 
 
 
