main焦点图实现

--- a/index.html
+++ b/index.html
@@ -111,6 +111,30 @@
         </div>
     </div>
 
+    <div class="wrapper">
+        <div class="main">
+            <div class="focus"> 
+                <a href="#" class="arrow_left"> &lt; </a>
+                <a href="#" class="arrow_right"> &gt; </a>
+                <ul>
+                    <li style="display: none;"><a href="#"><img src="./uploads/banner3.jpg" alt=""></a></li>
+                    <li style="display: none;"><a href="#"><img src="./uploads/banner1.jpg" alt=""></a></li>
+                    <li style="display: block;"><a href="#"><img src="./uploads/banner2.jpg" alt=""></a></li>
+                    <li style="display: none;"><a href="#"><img src="./uploads/banner4.jpg" alt=""></a></li>
+                </ul>
+                <ul class="circle">
+                    <li></li>
+                    <li class="active"></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                </ul>
+            </div>
+            <div class="newsflash"></div>
+        </div>
+    </div>
+
     <div class="fotter">
         <div class="wrapper">
             <div class="module_service">
