main焦点图和右侧都实现了

--- a/index.html
+++ b/index.html
@@ -131,7 +131,106 @@
                     <li></li>
                 </ul>
             </div>
-            <div class="newsflash"></div>
+            <div class="newsflash">
+                <div class="news">
+                    <div class="news_dt">
+                        品优购快报
+                        <a href="#">更多 &gt;</a>
+                    </div>
+                    <div class="news_dd">
+                        <ul>
+                            <li><a href="#">今日特惠 同步全球 天天低价</a></li>
+                            <li><a href="#">今日特惠 同步全球 天天低价</a></li>
+                            <li><a href="#">今日特惠 同步全球 天天低价</a></li>
+                            <li><a href="#">今日特惠 同步全球 天天低价</a></li>
+                            <li><a href="#">今日特惠 同步全球 天天低价</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="lifeservice">
+                    <ul>
+                        <li>
+                            <a href="#">
+                                <i class="huafei"></i>
+                                <p>话费</p>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <i class="jipiao"></i>
+                                <p>机票</p>
+                            </a>
+                            <span class="hot"></span>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <i class="dianyingpiao"></i>
+                                <p>电影票</p>
+                            </a>
+                            <span class="hot"></span>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <i class="youxi"></i>
+                                <p>游戏</p>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <i class="caipiao"></i>
+                                <p>彩票</p>
+                            </a>
+                        </li>
+              
+                        <li>
+                            <a href="#">
+                                <i class="jiayouka"></i>
+                                <p>加油卡</p>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <i class="jiudian"></i>
+                                <p>酒店</p>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <i class="huochepiao"></i>
+                                <p>火车票</p>
+                            </a>
+                        </li>
+
+                        <li>
+                            <a href="">
+                                <i class="zhongchou"></i>
+                                <p>众筹</p>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <i class="licai"></i>
+                                <p>理财</p>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <i class="lipinka"></i>
+                                <p>礼品卡</p>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <i class="baitiao"></i>
+                                <p>白条</p>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="bargain">
+                    <a href="#"><img src="./uploads/bargain.jpg" alt=""></a>
+                </div>
+            </div>
         </div>
     </div>
 
